@@ -19,12 +19,17 @@ package org.apache.ignite.internal.catalog;
 
 import static java.util.concurrent.CompletableFuture.completedFuture;
 import static java.util.concurrent.CompletableFuture.failedFuture;
-import static java.util.stream.Collectors.joining;
+import static java.util.stream.Collectors.toList;
+import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateAddColumnParams;
+import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateAlterColumnParams;
 import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateAlterZoneParams;
 import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateCreateHashIndexParams;
 import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateCreateSortedIndexParams;
+import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateCreateTableParams;
 import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateCreateZoneParams;
+import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateDropColumnParams;
 import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateDropIndexParams;
+import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateDropTableParams;
 import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateDropZoneParams;
 import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateRenameZoneParams;
 import static org.apache.ignite.internal.catalog.commands.CatalogUtils.fromParams;
@@ -35,18 +40,13 @@ import static org.apache.ignite.lang.IgniteStringFormatter.format;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map.Entry;
 import java.util.NavigableMap;
 import java.util.Objects;
-import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentSkipListMap;
 import java.util.function.LongSupplier;
-import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import org.apache.ignite.internal.catalog.commands.AbstractCreateIndexCommandParams;
 import org.apache.ignite.internal.catalog.commands.AlterColumnParams;
 import org.apache.ignite.internal.catalog.commands.AlterTableAddColumnParams;
@@ -98,10 +98,10 @@ import org.apache.ignite.internal.manager.Producer;
 import org.apache.ignite.internal.util.PendingComparableValuesTracker;
 import org.apache.ignite.lang.ColumnAlreadyExistsException;
 import org.apache.ignite.lang.ColumnNotFoundException;
-import org.apache.ignite.lang.ErrorGroups;
 import org.apache.ignite.lang.ErrorGroups.Common;
 import org.apache.ignite.lang.ErrorGroups.DistributionZones;
 import org.apache.ignite.lang.ErrorGroups.Index;
+import org.apache.ignite.lang.ErrorGroups.Table;
 import org.apache.ignite.lang.IgniteException;
 import org.apache.ignite.lang.IgniteInternalException;
 import org.apache.ignite.lang.IndexAlreadyExistsException;
@@ -315,13 +315,11 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
     @Override
     public CompletableFuture<Void> createTable(CreateTableParams params) {
         return saveUpdateAndWaitForActivation(catalog -> {
+            validateCreateTableParams(params);
+
             CatalogSchemaDescriptor schema = getSchema(catalog, params.schemaName());
 
-            if (schema.table(params.tableName()) != null) {
-                throw new TableAlreadyExistsException(schema.name(), params.tableName());
-            }
-
-            validateCreateTableParams(params);
+            ensureNoTableOrIndexExistsWithSameName(schema, params.tableName());
 
             CatalogZoneDescriptor zone = getZone(catalog, Objects.requireNonNullElse(params.zone(), DEFAULT_ZONE_NAME));
 
@@ -342,6 +340,8 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
     @Override
     public CompletableFuture<Void> dropTable(DropTableParams params) {
         return saveUpdateAndWaitForActivation(catalog -> {
+            validateDropTableParams(params);
+
             CatalogSchemaDescriptor schema = getSchema(catalog, params.schemaName());
 
             CatalogTableDescriptor table = getTable(schema, params.tableName());
@@ -360,11 +360,9 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
 
     @Override
     public CompletableFuture<Void> addColumn(AlterTableAddColumnParams params) {
-        if (params.columns().isEmpty()) {
-            return completedFuture(null);
-        }
-
         return saveUpdateAndWaitForActivation(catalog -> {
+            validateAddColumnParams(params);
+
             CatalogSchemaDescriptor schema = getSchema(catalog, params.schemaName());
 
             CatalogTableDescriptor table = getTable(schema, params.tableName());
@@ -387,16 +385,14 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
 
     @Override
     public CompletableFuture<Void> dropColumn(AlterTableDropColumnParams params) {
-        if (params.columns().isEmpty()) {
-            return completedFuture(null);
-        }
-
         return saveUpdateAndWaitForActivation(catalog -> {
+            validateDropColumnParams(params);
+
             CatalogSchemaDescriptor schema = getSchema(catalog, params.schemaName());
 
             CatalogTableDescriptor table = getTable(schema, params.tableName());
 
-            validateAlterTableDropColumnParams(params, schema, table);
+            ensureColumnCanBeDropped(schema, table, params);
 
             return List.of(
                     new DropColumnsEntry(table.id(), params.columns())
@@ -407,6 +403,8 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
     @Override
     public CompletableFuture<Void> alterColumn(AlterColumnParams params) {
         return saveUpdateAndWaitForActivation(catalog -> {
+            validateAlterColumnParams(params);
+
             CatalogSchemaDescriptor schema = getSchema(catalog, params.schemaName());
 
             CatalogTableDescriptor table = getTable(schema, params.tableName());
@@ -417,7 +415,7 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
 
             if (origin.equals(target)) {
                 // No modifications required.
-                return Collections.emptyList();
+                return List.of();
             }
 
             boolean isPkColumn = table.isPrimaryKeyColumn(origin.name());
@@ -757,115 +755,6 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
         );
     }
 
-    private static void validateCreateTableParams(CreateTableParams params) {
-        // Table must have columns.
-        if (params.columns().isEmpty()) {
-            throw new IgniteInternalException(ErrorGroups.Index.INVALID_INDEX_DEFINITION_ERR, "Table must include at least one column.");
-        }
-
-        // Column names must be unique.
-        params.columns().stream()
-                .map(ColumnParams::name)
-                .filter(Predicate.not(new HashSet<>()::add))
-                .findAny()
-                .ifPresent(columnName -> {
-                    throw new IgniteInternalException(
-                            ErrorGroups.Index.INVALID_INDEX_DEFINITION_ERR,
-                            "Can't create table with duplicate columns: {}",
-                            params.columns().stream().map(ColumnParams::name).collect(joining(", "))
-                    );
-                });
-
-        // Table must have PK columns.
-        if (params.primaryKeyColumns().isEmpty()) {
-            throw new IgniteInternalException(
-                    ErrorGroups.Index.INVALID_INDEX_DEFINITION_ERR,
-                    "Table without primary key is not supported."
-            );
-        }
-
-        // PK columns must be valid columns.
-        Set<String> columns = params.columns().stream().map(ColumnParams::name).collect(Collectors.toSet());
-        params.primaryKeyColumns().stream()
-                .filter(Predicate.not(columns::contains))
-                .findAny()
-                .ifPresent(columnName -> {
-                    throw new IgniteInternalException(
-                            ErrorGroups.Index.INVALID_INDEX_DEFINITION_ERR,
-                            "Invalid primary key columns: {}",
-                            params.columns().stream().map(ColumnParams::name).collect(joining(", "))
-                    );
-                });
-
-        // PK column names must be unique.
-        params.primaryKeyColumns().stream()
-                .filter(Predicate.not(new HashSet<>()::add))
-                .findAny()
-                .ifPresent(columnName -> {
-                    throw new IgniteInternalException(
-                            ErrorGroups.Index.INVALID_INDEX_DEFINITION_ERR,
-                            "Primary key columns contains duplicates: {}",
-                            String.join(", ", params.primaryKeyColumns())
-                    );
-                });
-
-        List<String> colocationCols = params.colocationColumns();
-        if (colocationCols != null) {
-            // Colocation columns must be unique
-            colocationCols.stream()
-                    .filter(Predicate.not(new HashSet<>()::add))
-                    .findAny()
-                    .ifPresent(columnName -> {
-                        throw new IgniteInternalException(
-                                ErrorGroups.Index.INVALID_INDEX_DEFINITION_ERR,
-                                "Colocation columns contains duplicates: {}",
-                                String.join(", ", colocationCols)
-                        );
-                    });
-
-            // Colocation column must be valid PK column
-            Set<String> pkColumns = new HashSet<>(params.primaryKeyColumns());
-            List<String> outstandingColumns = colocationCols.stream()
-                    .filter(Predicate.not(pkColumns::contains))
-                    .collect(Collectors.toList());
-            if (!outstandingColumns.isEmpty()) {
-                throw new IgniteInternalException(
-                        ErrorGroups.Index.INVALID_INDEX_DEFINITION_ERR,
-                        "Colocation columns must be subset of primary key: outstandingColumns=" + outstandingColumns);
-            }
-        }
-    }
-
-    private static void validateAlterTableDropColumnParams(
-            AlterTableDropColumnParams params,
-            CatalogSchemaDescriptor schema,
-            CatalogTableDescriptor table
-    ) {
-        for (String columnName : params.columns()) {
-            if (table.column(columnName) == null) {
-                throw new ColumnNotFoundException(schema.name(), params.tableName(), columnName);
-            }
-
-            if (table.isPrimaryKeyColumn(columnName)) {
-                throw new SqlException(
-                        STMT_VALIDATION_ERR,
-                        "Can't drop primary key column: [name=" + columnName + ']'
-                );
-            }
-        }
-
-        Arrays.stream(schema.indexes())
-                .filter(index -> index.tableId() == table.id())
-                .forEach(index -> params.columns().stream()
-                        .filter(index::hasColumn)
-                        .findAny()
-                        .ifPresent(columnName -> {
-                            throw new SqlException(
-                                    STMT_VALIDATION_ERR,
-                                    format("Can't drop indexed column: [columnName={}, indexName={}]", columnName, index.name()));
-                        }));
-    }
-
     private static void validateAlterTableColumn(
             CatalogTableColumnDescriptor origin,
             CatalogTableColumnDescriptor target,
@@ -947,14 +836,45 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
     }
 
     private static void validateIndexColumns(CatalogTableDescriptor table, AbstractCreateIndexCommandParams params) {
-        for (String indexColumn : params.columns()) {
-            if (table.columnDescriptor(indexColumn) == null) {
-                throw new ColumnNotFoundException(indexColumn);
-            }
-        }
+        validateColumnsExistInTable(table, params.columns());
 
         if (params.unique() && !params.columns().containsAll(table.colocationColumns())) {
             throw new IgniteException(Index.INVALID_INDEX_DEFINITION_ERR, "Unique index must include all colocation columns");
+        }
+    }
+
+    private static void ensureColumnCanBeDropped(
+            CatalogSchemaDescriptor schema,
+            CatalogTableDescriptor table,
+            AlterTableDropColumnParams params
+    ) {
+        validateColumnsExistInTable(table, params.columns());
+
+        List<String> inPrimaryKeyColumns = params.columns().stream()
+                .filter(table::isPrimaryKeyColumn)
+                .collect(toList());
+
+        if (!inPrimaryKeyColumns.isEmpty()) {
+            throw new CatalogValidationException(Table.TABLE_DEFINITION_ERR, "Can't drop primary key columns: " + inPrimaryKeyColumns);
+        }
+
+        Arrays.stream(schema.indexes())
+                .filter(index -> index.tableId() == table.id())
+                .forEach(index -> params.columns().stream()
+                        .filter(index::hasColumn)
+                        .findAny()
+                        .ifPresent(columnName -> {
+                            throw new CatalogValidationException(
+                                    STMT_VALIDATION_ERR,
+                                    format("Can't drop indexed column: [columnName={}, indexName={}]", columnName, index.name()));
+                        }));
+    }
+
+    private static void validateColumnsExistInTable(CatalogTableDescriptor table, Collection<String> columns) {
+        for (String column : columns) {
+            if (table.columnDescriptor(column) == null) {
+                throw new ColumnNotFoundException(column);
+            }
         }
     }
 }
